--- a/style.css
+++ b/style.css
@@ -16,11 +16,12 @@ body{
 .container{
 
   height: 260px;
-  background: rgba(255, 255, 255, 0.7);
+  background: rgba(255, 255, 255, 1);
   max-width: 410px;
-  border-radius: 7px;
+  border-radius: 10px 10px 0px 0px;
   padding: 16px 25px;
   transition: height 0.5s ease;
+  box-shadow: 3px 3px rgba(0, 0, 0, 0.1); 
 }
 
 .container .form {
@@ -78,10 +79,11 @@ body{
   opacity: 1;
   pointer-events: auto;
   transition: opacity 0.5s ease;
-  background-color: rgba(255, 255, 255, 0.7);
-  border-radius: 7px;
+  background-color: rgba(255, 255, 255, 1);
+  border-radius: 0px 0px 10px 10px;
   max-width: 410px;
-  padding: 25px 205px;
+  padding: 15px 205px;
+  box-shadow: 3px 3px rgba(0, 0, 0, 0.1); 
 
 }
 
