--- a/style.css
+++ b/style.css
@@ -9,8 +9,9 @@ body{
   display: flex;
   align-items: center;
   justify-content: center;
-  min-height: 100vh;
+  min-height: 70vh;
   background: url(./assets/background.jpg) no-repeat center/cover;
+  margin-top: auto;
 }
 
 .container{
