--- a/style.css
+++ b/style.css
@@ -2,7 +2,6 @@
   margin: 0;
   padding: 0;
   box-sizing: border-box;
-  font-family: sans-serif;
 }
 
 body{
@@ -11,6 +10,14 @@ body{
   justify-content: center;
   background: url(./assets/background.jpg) no-repeat center/cover;
   margin-top: auto;
+}
+
+body h1{
+    font-family: 'Roboto', sans-serif;
+}
+
+body p{
+  font-family: 'Roboto', sans-serif;
 }
 
 .container{
@@ -84,7 +91,7 @@ body{
   background-color: rgba(255, 255, 255, 1);
   border-radius: 0px 0px 10px 10px;
   max-width: 350px;
-  padding: 15px 175px;
+  padding: 8px 175px 16px;
   box-shadow: 3px 3px rgba(0, 0, 0, 0.1); 
 }
 
